# auto-lca-public

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/auto_lca/models/: enum.py  nlp.py  paper.py
src/auto_lca/process/nlp/: config.py  document_rank.py  extract.py  nltk_utils.py  pipeline.py  topic.py
src/auto_lca/process/preprocess/: config_parser.py  reference_parser.py
src/auto_lca/process/sog/: aspect.py  concept.py  concept_dynamic.py  config - with scenario.json  config.json  mistral_sog.py  sample_config.csv  sample_config.json  sog.py
src/auto_lca/scripts/: sog_runner.py  sog_runner_inline.py
src/auto_lca/shared/: bigquery.py  constants.py  error.py  file_manager.py  log.py  schema_helper.py  util.py
src/auto_lca/shared/queries/nlp/batch/: qa.py
src/auto_lca/statistics/: compare.py  similarity.py  statistics.py
tests/test_crawler/: test_util.py
